6.6b fix spacing

--- a/CSS/characterCSS.css
+++ b/CSS/characterCSS.css
@@ -633,7 +633,7 @@
 .badge-container {
   display: flex;
   justify-content: flex-start;
-  padding: 0 25px 0 25px;
+  padding: 0 20px 0 20px;
 }
 
 .item-name-badge,
